syntax = "proto3";

option go_package = ".";

service VideoUser {
  rpc Login (LoginReq) returns (LoginRes);
  rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoRes);
}

message LoginReq{
  int64 Mobile = 1;
  int32 Code = 2;
}

message LoginRes{
  int32 Id = 1;
}

message GetUserInfoReq{
  int32 UserId = 1;
}

message GetUserInfoRes{
    string Avator = 1;
    string NickName = 2;
    int32 Id = 3;
    string Signature = 4;
    string Constellation = 5;
    string IpAddress = 6;
}